<resources>
    <string name="app_name">App Story</string>

    <string name="app_logo_desc">App Logo</string>

    <string name="login_title">Login to Your Account</string>
    <string name="register_title">Create a New Account</string>

    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Full Name</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <string name="register_prompt">Dont have an account? Register</string>
    <string name="login_prompt">Already have an account? Login</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="explore_our_latest_events_and_activities">Explore our latest events and activities.</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="sample_event_name">Sample Event Name</string>
    <string name="date_june_10_2024">Date: June 10, 2024</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="image_story">Image Story</string>
    <string name="add_story">Add Story</string>
    <string name="decription">Decription</string>
    <string name="select_photo">Select Photo</string>
    <string name="preview">Preview</string>
    <string name="story_title">Story Title</string>
    <string name="story_description_goes_here">Story description goes here</string>
    <string name="error_invalid_email">Format email tidak valid</string>
    <string name="error_password_length">Password harus minimal 8 karakter</string>
    <string name="error_empty_name">Nama tidak boleh kosong</string>
    <string name="story_detail">Detail Story</string>
    <string name="google_maps_key">AIzaSyDm2VrCm3MrYDlO5F-Id8B0fO9FWkIQYoE</string>
    <string name="story_location">Story Location</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="kesalahan">Terjadi Kesalahan</string>

</resources>
